Updated gene annotation